[gd_scene load_steps=8 format=3 uid="uid://dcqei64muvsa0"]

[ext_resource type="Script" uid="uid://ccp7ruiqswq6j" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://c4nayl4mjwdtm" path="res://territory_L.tscn" id="2_272bh"]
[ext_resource type="PackedScene" uid="uid://d2jxwwo614it6" path="res://territory_S.tscn" id="3_5vw27"]
[ext_resource type="Script" uid="uid://doj54yg4f8tff" path="res://game_manager.gd" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://cn5ospl2phxg8" path="res://territory_square.tscn" id="4_kek77"]
[ext_resource type="PackedScene" uid="uid://likotftipkfe" path="res://territory_straight.tscn" id="5_4c57u"]
[ext_resource type="PackedScene" uid="uid://ceie8ycc6lojf" path="res://territory_T.tscn" id="6_efxa6"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="Map" type="Node2D" parent="."]

[node name="Territory1" parent="Map" instance=ExtResource("3_5vw27")]
position = Vector2(368, 161)
territory_id = 1

[node name="Territory2" parent="Map" instance=ExtResource("2_272bh")]
position = Vector2(416, 185)
territory_id = 2

[node name="Territory3" parent="Map" instance=ExtResource("2_272bh")]
position = Vector2(464, 185)
territory_id = 3

[node name="Territory4" parent="Map" instance=ExtResource("6_efxa6")]
position = Vector2(512, 161)
territory_id = 4

[node name="Territory5" parent="Map" instance=ExtResource("5_4c57u")]
position = Vector2(584, 161)
territory_id = 5

[node name="Territory6" parent="Map" instance=ExtResource("6_efxa6")]
position = Vector2(560, 185)
territory_id = 6

[node name="Territory7" parent="Map" instance=ExtResource("6_efxa6")]
position = Vector2(656, 185)
territory_id = 7

[node name="Territory8" parent="Map" instance=ExtResource("2_272bh")]
position = Vector2(368, 209)
territory_id = 8

[node name="Territory9" parent="Map" instance=ExtResource("6_efxa6")]
position = Vector2(416, 233)
territory_id = 9

[node name="Territory10" parent="Map" instance=ExtResource("2_272bh")]
position = Vector2(488, 233)
territory_id = 10

[node name="Territory11" parent="Map" instance=ExtResource("4_kek77")]
position = Vector2(536, 233)
territory_id = 11

[node name="Territory12" parent="Map" instance=ExtResource("5_4c57u")]
position = Vector2(488, 281)
territory_id = 12

[node name="Territory13" parent="Map" instance=ExtResource("2_272bh")]
position = Vector2(464, 281)
territory_id = 13

[node name="Territory14" parent="Map" instance=ExtResource("3_5vw27")]
position = Vector2(392, 257)
territory_id = 14

[node name="Territory15" parent="Map" instance=ExtResource("4_kek77")]
position = Vector2(344, 281)
territory_id = 15

[node name="Territory16" parent="Map" instance=ExtResource("5_4c57u")]
position = Vector2(344, 329)
territory_id = 16

[node name="Territory17" parent="Map" instance=ExtResource("4_kek77")]
position = Vector2(416, 353)
territory_id = 17

[node name="Territory18" parent="Map" instance=ExtResource("3_5vw27")]
position = Vector2(464, 329)
territory_id = 18

[node name="Territory19" parent="Map" instance=ExtResource("3_5vw27")]
position = Vector2(512, 305)
territory_id = 19

[node name="Territory20" parent="Map" instance=ExtResource("5_4c57u")]
position = Vector2(536, 377)
territory_id = 20

[node name="Territory21" parent="Map" instance=ExtResource("6_efxa6")]
position = Vector2(560, 305)
territory_id = 21

[node name="Territory22" parent="Map" instance=ExtResource("4_kek77")]
position = Vector2(607, 329)
territory_id = 22

[node name="Territory23" parent="Map" instance=ExtResource("5_4c57u")]
position = Vector2(631, 305)
territory_id = 23

[node name="Territory24" parent="Map" instance=ExtResource("4_kek77")]
position = Vector2(656, 257)
territory_id = 24

[node name="Territory25" parent="Map" instance=ExtResource("6_efxa6")]
position = Vector2(608, 233)
territory_id = 25

[node name="Territory26" parent="Map" instance=ExtResource("3_5vw27")]
position = Vector2(654, 329)
territory_id = 26

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BottomPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 901.0
offset_top = 511.0
offset_right = 1142.0
offset_bottom = 638.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 9.0
offset_right = -12.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CurrentPlayerLabel" type="Label" parent="UI/BottomPanel/VBoxContainer"]
layout_mode = 2
text = "Current Player: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndTurnButton" type="Button" parent="UI/BottomPanel/VBoxContainer"]
layout_mode = 2
text = "End Turn"

[node name="ResetButton" type="Button" parent="UI/BottomPanel/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="WinDialog" type="ConfirmationDialog" parent="UI"]
title = "Game Over!"
initial_position = 1
size = Vector2i(300, 150)
ok_button_text = "Play Again"
cancel_button_text = "Close"

[node name="WinLabel" type="Label" parent="UI/WinDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
text = "Player X Wins!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetConfirmDialog" type="ConfirmationDialog" parent="UI"]
title = "Confirm Reset"
initial_position = 1
size = Vector2i(350, 150)
ok_button_text = "Yes"

[node name="ResetConfirmLabel" type="Label" parent="UI/ResetConfirmDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
text = "Are you sure you want to start a new game?
All progress will be lost."
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattleResultPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 511.0
offset_right = 891.0
offset_bottom = 638.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/BattleResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 11.0
offset_right = -12.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="UI/BattleResultPanel/VBoxContainer"]
layout_mode = 2
text = "Last Battle:"

[node name="AttackerLabel" type="Label" parent="UI/BattleResultPanel/VBoxContainer"]
layout_mode = 2
text = "Attacker: -"

[node name="DefenderLabel" type="Label" parent="UI/BattleResultPanel/VBoxContainer"]
layout_mode = 2
text = "Defender: -"

[node name="ResultLabel" type="Label" parent="UI/BattleResultPanel/VBoxContainer"]
layout_mode = 2
text = "No battles yet"

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_h2yge")

[connection signal="pressed" from="UI/BottomPanel/VBoxContainer/EndTurnButton" to="GameManager" method="_on_end_turn_pressed"]
[connection signal="pressed" from="UI/BottomPanel/VBoxContainer/ResetButton" to="GameManager" method="_on_reset_button_pressed"]
[connection signal="canceled" from="UI/WinDialog" to="GameManager" method="_on_close_pressed"]
[connection signal="confirmed" from="UI/WinDialog" to="GameManager" method="_on_play_again_pressed"]
[connection signal="canceled" from="UI/ResetConfirmDialog" to="GameManager" method="_on_reset_cancel_pressed"]
[connection signal="confirmed" from="UI/ResetConfirmDialog" to="GameManager" method="_on_reset_confirm_pressed"]
